Added configuration settings for HTTPS, Static content directory, and certificate and key files. Cleaned up HTML code, and added a modal that pops up with a link as opposed to setting the result in the header. (I need a designer lol)

--- a/config.yml
+++ b/config.yml
@@ -8,4 +8,9 @@ redis:
     host: 'localhost'
     port: 6379
 server:
-    port: 8080 
+    port: 8080
+    static-directory: "static"
+    use-https: false
+https:
+    key-file: "key.pem"
+    cert-file: "cert.pem"	
